# dashboardthelabsolutions

./: .gitignore  CLAUDE.md  CNAME  README.md  SECURITY.md  cotiza.html  finanzas.html  index.html  jarvis-module.html  mail-api-config.example.php  mail-api.config.example.php  mail-api.php  manifest.json  politica-cookies.html  politica-privacidad.html  robots.txt  styles.css  sw.js  terminos-condiciones.html
airtable-proxy/: wrangler.toml
bff/: README.md  package.json  wrangler.toml
desktop-app/: .gitignore  README.md  package.json
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: main.rs
docs/: AGENTS_QUEUE.md  ARQUITECTURA_BFF.md  AUDITORIA_2026-06.md  AUDITORIA_MAQUINAS.md  BACKUP_AIRTABLE.md  CALENDARIO.md  COMANDOS.txt  ENTREGABILIDAD_EMAIL.md  GOOGLE_ADS.md  MONITOREO.md  NEWSLETTER.md  NOTIFICACIONES_EMAIL_CLIENTE.md  NOTIFICACIONES_WHATSAPP.md  PENDIENTE_GO_LIVE.md  PIPELINE.md  REDES_SOCIALES.md
firmas/: nicanor.html
js/: agentes.js  calendario.js  correo.js  drive.js  finanzas.js  kai.js  maquinas.js  notify.js  oficina.js  pdf-fichas.js  proveedores.js  redes.js  seo-ads.js  slicer3d.js  web-analytics.js
lead-worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
printer-bridge/: README.md  com.thelab.printer-bridge.plist  install-launchd.sh  maint-config.example.json  server.js
scripts/: backup-airtable.mjs  test-pipeline.sh
sii-worker/: .env.example  .gitignore  package-lock.json  package.json  server.js  setup-oracle.sh  (+2 more)
(+47 files in other folders)
